--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -109,10 +109,10 @@
   </div>
 
   <div class="row d-flex justify-content-between wMarginTop30px">
-    <div class="col-md-5 order-1 col-12 wMarginBottom">
+    <div class="col-md-5 order-md-1 col-12 wMarginBottom">
       <a class="block-button btn btn-success" [routerLink]="['/event', event.shortName]" translate="buy-other-tickets"></a>
     </div>
-    <div class="col-md-5 order-0 col-12 wMarginBottom">
+    <div class="col-md-5 order-md-0 col-12 wMarginBottom">
       <a class="block-button btn btn-outline-dark" [attr.href]="event.websiteUrl" translate="to-event-site"></a>
     </div>
   </div>
