--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -198,8 +198,8 @@
 
           <hr>
           <div class="row d-flex justify-content-between mobile-add-margin-bottom">
-            <div class="col-md-5 order-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
-            <div class="col-md-5 order-0 col-12 "><a [href]="event.websiteUrl" class="block-button btn btn-outline-dark" translate="to-event-site"></a></div>
+            <div class="col-md-5 order-md-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
+            <div class="col-md-5 order-md-0 col-12 "><a [href]="event.websiteUrl" class="block-button btn btn-outline-dark" translate="to-event-site"></a></div>
           </div>
         </form>
       </div>
