--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -14,7 +14,7 @@
     <app-summary-table [event]="event" [reservationInfo]="reservationInfo"></app-summary-table>
 
     <div class="alert alert-danger" role="alert" *ngIf="globalErrors && globalErrors.length > 0">
-      <div *ngFor="let err of globalErrors"><strong [translate]="err"></strong></div>
+      <div *ngFor="let err of globalErrors"><strong [translate]="err.code"></strong></div>
     </div>
 
     <div *ngIf="!reservationInfo.orderSummary.free">
