--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
+$font-family-sans-serif: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+
 @import "~bootstrap/scss/bootstrap";
 
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
 body {
     background-color: #E5E5E5;
-    font-size: 14px;
 }
 
 .application-container {
