--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -94,7 +94,7 @@
             <div class="col-sm-9">
               <div class="row">
                 <div class="order-1 col-6 text-right"><button type="submit" class="btn btn-success">{{ (ticket.assigned ? 'reservation-page-complete.update' : 'reservation-page-complete.assign') | translate}}</button></div>
-                <div class="order-0 col-6"><button type="button" (click)="ticketsFormShow[ticket.uuid] = false" translate="reservation-page-complete.cancel" class="btn btn-outline-dark" *ngIf="ticket.assigned"></button></div>
+                <div class="order-0 col-6"><button type="button" (click)="ticketsFormShow[ticket.uuid] = false" translate="reservation-page-complete.cancel" class="btn btn-light" *ngIf="ticket.assigned"></button></div>
               </div>
             </div>
           </div>
@@ -113,7 +113,7 @@
       <a class="block-button btn btn-success" [routerLink]="['/event', event.shortName]" translate="buy-other-tickets"></a>
     </div>
     <div class="col-md-5 order-md-0 col-12 wMarginBottom">
-      <a class="block-button btn btn-outline-dark" [attr.href]="event.websiteUrl" translate="to-event-site"></a>
+      <a class="block-button btn btn-light" [attr.href]="event.websiteUrl" translate="to-event-site"></a>
     </div>
   </div>
 
