--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -47,14 +47,14 @@
           </div>
           <div class="form-group" *ngIf="ticketCategoriesForWaitingList && ticketCategoriesForWaitingList.length > 1">
             <label for="selectedCategory" translate="reservation-page.category"></label>
-            <select name="selectedCategory" id="selectedCategory" formControlName="selectedCategory" class="form-control" appInvalidFeedback>
+            <select name="selectedCategory" id="selectedCategory" formControlName="selectedCategory" class="custom-select" appInvalidFeedback>
               <option value=""></option>
               <option *ngFor="let tc of ticketCategoriesForWaitingList" [value]="tc.id">{{tc.name}}</option>
             </select>
           </div>
           <div class="form-group">
               <label for="userLanguage" translate="reservation-page-complete.language"></label>
-              <select name="userLanguage" formControlName="userLanguage" id="userLanguage" class="form-control" required="required" aria-required="true" appInvalidFeedback>
+              <select name="userLanguage" formControlName="userLanguage" id="userLanguage" class="custom-select" required="required" aria-required="true" appInvalidFeedback>
                 <option value=""></option>
                 <option *ngFor="let l of event.contentLanguages" [value]="l.locale">{{l.displayLanguage}}</option>
               </select>
@@ -117,7 +117,7 @@
                         </div>
                         <div class="col-sm-2">
                           <ng-container *ngIf="category.saleableAndLimitNotReached">
-                            <select formControlName="amount" class="form-control">
+                            <select formControlName="amount" class="custom-select">
                               <option *ngFor="let amount of ticketCategoryAmount[category.id]" [value]="amount">{{amount}}</option>
                             </select>
                           </ng-container>
@@ -199,7 +199,7 @@
           <hr>
           <div class="row d-flex justify-content-between mobile-add-margin-bottom">
             <div class="col-md-5 order-md-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
-            <div class="col-md-5 order-md-0 col-12 "><a [href]="event.websiteUrl" class="block-button btn btn-outline-dark" translate="to-event-site"></a></div>
+            <div class="col-md-5 order-md-0 col-12 "><a [href]="event.websiteUrl" class="block-button btn btn-light" translate="to-event-site"></a></div>
           </div>
         </form>
       </div>
