--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -10,13 +10,13 @@
       <div class="form-group">
         <label translate="invoice.type"></label>
         <div>
-          <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" formControlName="addCompanyBillingDetails" [value]="false" id="invoiceTypePrivate" >
-              <label class="form-check-label radio-inline" for="invoiceTypePrivate">{{' '}}{{'invoice.type.private' | translate}}</label>
+          <div class="custom-control custom-radio custom-control-inline">
+              <input class="custom-control-input" type="radio" formControlName="addCompanyBillingDetails" [value]="false" id="invoiceTypePrivate" >
+              <label class="custom-control-label radio-inline" for="invoiceTypePrivate">{{' '}}{{'invoice.type.private' | translate}}</label>
           </div>
-          <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" formControlName="addCompanyBillingDetails" [value]="true" id="invoiceTypeBusiness">
-              <label class="form-check-label radio-inline" for="invoiceTypeBusiness">{{' '}}{{'invoice.type.business' | translate}}</label>
+          <div class="custom-control custom-radio custom-control-inline">
+              <input class="custom-control-input" type="radio" formControlName="addCompanyBillingDetails" [value]="true" id="invoiceTypeBusiness">
+              <label class="custom-control-label radio-inline" for="invoiceTypeBusiness">{{' '}}{{'invoice.type.business' | translate}}</label>
           </div>
         </div>
       </div>
@@ -125,13 +125,13 @@
             <input type="text" [attr.maxlength]="7" class="form-control" formControlName="italyEInvoicingReferenceAddresseeCode" appInvalidFeedback>
         </div>
     </div>
-    <div class="col-md-12">
+    <div class="col-xs-12">
         <div class="form-group">
             <label><input type="radio" value="PEC"  formControlName="italyEInvoicingReferenceType">{{' '}}<span class="label-after-radio" translate="invoice-fields.pec"></span></label>
             <input type="email" class="form-control" formControlName="italyEInvoicingReferencePEC" appInvalidFeedback>
         </div>
     </div>
-    <div class="col-md-12">
+    <div class="col-xs-12">
         <div class="form-group">
             <label><input type="radio" value="NONE"  formControlName="italyEInvoicingReferenceType">{{' '}}<span class="label-after-radio" translate="invoice.fields.neither"></span></label>
         </div>
