--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,7 @@ body {
     transform: rotate(-45deg);
 }
 
-@media (min-width: 576px) {
+@include media-breakpoint-up(sm) {
     label.col-form-label, dt.align-right-mobile-aware {
         text-align: right;
     }
@@ -84,6 +84,10 @@ body {
 
 .table>thead:first-child>tr:first-child>th {
     border-top: 0;
+}
+
+.table th {
+  font-size: $font-size-base;
 }
 
 .text-align-right {
@@ -118,13 +122,13 @@ label.radio-inline {
     margin-top:38px;
 }
 
-@media (min-width: 576px) {
+@include media-breakpoint-up(sm) {
     .container { /*override bootstrap value*/
         max-width: 100%;
     }
 }
 
-@media (min-width: 1200px) {
+@include media-breakpoint-up(xl) {
     .container {
         width: 960px;
     }
@@ -211,4 +215,9 @@ label.radio-inline {
 .ng-select.form-control.ng-select-focused:not(.ng-select-opened)>.ng-select-container {
     outline: 0!important;
     box-shadow: none!important;
+}
+
+div.preformatted {
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
