--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -125,13 +125,13 @@
             <input type="text" [attr.maxlength]="7" class="form-control" formControlName="italyEInvoicingReferenceAddresseeCode" appInvalidFeedback>
         </div>
     </div>
-    <div class="col-xs-12">
+    <div class="col-12">
         <div class="form-group">
             <label><input type="radio" value="PEC"  formControlName="italyEInvoicingReferenceType">{{' '}}<span class="label-after-radio" translate="invoice-fields.pec"></span></label>
             <input type="email" class="form-control" formControlName="italyEInvoicingReferencePEC" appInvalidFeedback>
         </div>
     </div>
-    <div class="col-xs-12">
+    <div class="col-12">
         <div class="form-group">
             <label><input type="radio" value="NONE"  formControlName="italyEInvoicingReferenceType">{{' '}}<span class="label-after-radio" translate="invoice.fields.neither"></span></label>
         </div>
