--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -59,15 +59,15 @@
                 <option *ngFor="let l of event.contentLanguages" [value]="l.locale">{{l.displayLanguage}}</option>
               </select>
           </div>
-          <div class="checkbox wMarginTop wMarginBottom" *ngIf="event.privacyPolicyUrl">
-              <label>
-                  <input type="checkbox" required name="privacyPolicyAccepted" formControlName="privacyPolicyAccepted" value="true" appInvalidFeedback [invalidFeedbackInLabel]="true">
-                  {{'reservation-page.privacy.prefix'|translate}}{{' '}}<a [href]="event.privacyPolicyUrl" target="_blank" translate="reservation-page.privacy.link.text"></a>{{'reservation-page.privacy.suffix'|translate}}
+          <div class="custom-control custom-checkbox wMarginTop wMarginBottom" *ngIf="event.privacyPolicyUrl">
+              <input class="custom-control-input" id="privacyPolicyAccepted" type="checkbox" required name="privacyPolicyAccepted" formControlName="privacyPolicyAccepted" value="true" appInvalidFeedback [invalidFeedbackInLabel]="true">
+              <label class="custom-control-label" for="privacyPolicyAccepted">
+                {{'reservation-page.privacy.prefix'|translate}}{{' '}}<a [href]="event.privacyPolicyUrl" target="_blank" translate="reservation-page.privacy.link.text"></a>{{'reservation-page.privacy.suffix'|translate}}
               </label>
           </div>
-          <div class="checkbox">
-              <label>
-                  <input type="checkbox" required name="termAndConditionsAccepted" formControlName="termAndConditionsAccepted" aria-required="true" appInvalidFeedback [invalidFeedbackInLabel]="true">
+          <div class="custom-control custom-checkbox">
+              <input class="custom-control-input" id="termsAndConditionsAccepted" type="checkbox" required name="termAndConditionsAccepted" formControlName="termAndConditionsAccepted" aria-required="true" appInvalidFeedback [invalidFeedbackInLabel]="true">
+              <label class="custom-control-label" for="termsAndConditionsAccepted">
                   {{'reservation-page.tc.prefix'|translate}}{{' '}}<a [href]="event.termsAndConditionsUrl" target="_blank" translate="reservation-page.tc.link.text"></a>{{'reservation-page.tc.suffix'|translate}}
               </label>
           </div>
