--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -96,11 +96,9 @@
         </div>
     </div>
     <div class="col-md-6" *ngIf="vatNumberStrictlyRequired">
-        <div class="form-group">
-            <div class="form-check checkbox-in-form-group">
-                <input class="form-check-input" type="checkbox" formControlName="skipVatNr" [value]="true" id="skip-vat-nr" appInvalidFeedback>
-                <label class="form-check-label radio-inline" for="skip-vat-nr">{{' '}}{{'reservation-page.skipVatNr' | translate: {'0': ('common.vat' | translate)} }}</label>
-            </div>
+        <div class="custom-control custom-checkbox checkbox-in-form-group">
+            <input class="custom-control-input" type="checkbox" formControlName="skipVatNr" [value]="true" id="skip-vat-nr" appInvalidFeedback>
+            <label class="custom-control-label" for="skip-vat-nr">{{' '}}{{'reservation-page.skipVatNr' | translate: {'0': ('common.vat' | translate)} }}</label>
         </div>
     </div>
   </div>
