--- a/src/app/countdown/countdown.component.html
+++ b/src/app/countdown/countdown.component.html
@@ -1,5 +1,5 @@
 <div class="alert alert-info text-center">
     <fa-icon [icon]="['far', 'clock']"></fa-icon>{{' '}}
-    <span *ngIf="!expired" [innerHTML]="message"></span>
-    <strong *ngIf="expired" translate="error.STEP_2_ORDER_HAS_EXPIRED"></strong>
+    <span *ngIf="!isExpired" [innerHTML]="message"></span>
+    <strong *ngIf="isExpired" translate="error.STEP_2_ORDER_HAS_EXPIRED"></strong>
 </div>
