--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -101,7 +101,7 @@
         </form>
       </div>
 
-      <div class="alert alert-success wMarginTop30px wMarginBottom hidden alert-dismissible" role="alert" *ngIf="sendEmailForTicketStatus[ticket.uuid] === 'SENT'">
+      <div class="alert alert-success wMarginTop30px wMarginBottom hidden alert-dismissible" role="alert" *ngIf="sendEmailForTicketStatus[ticket.uuid]">
         <button type="button" class="close" (click)="sendEmailForTicketStatus[ticket.uuid] = false"><span aria-hidden="true">&times;</span><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
         <strong translate="email.ticket-email-sent"></strong>
       </div>
