--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -12,24 +12,35 @@
     </div>
 
     <div class="row">
-      <div class="col-12" [ngClass]="{'col-md-7': reservationInfo.invoiceRequested}">
+      <div class="col-12" [ngClass]="{'col-md-8': event.invoicingConfiguration.invoiceAllowed}">
         <app-summary-table [event]="event" [reservationInfo]="reservationInfo"></app-summary-table>
       </div>
-      <div class="d-none d-md-flex col-md-1 justify-content-md-center" *ngIf="reservationInfo.invoiceRequested">
+      <div class="d-none d-md-flex col-md-1 justify-content-md-center" *ngIf="event.invoicingConfiguration.invoiceAllowed">
         <div class="border-left separator"></div>
       </div>
-      <div class="col-12 col-md-4 invoice-details" *ngIf="reservationInfo.invoiceRequested">
+
+      <div class="col-12 col-md-3 invoice-details text-center" *ngIf="event.invoicingConfiguration.invoiceAllowed">
         <div class="d-flex flex-column justify-content-between h-100">
-          <div>
-            <h5 class="d-none d-md-block" translate="reservation-page.invoice-details"></h5>
-            <div class="page-header d-block d-md-none" translate="reservation-page.invoice-details"></div>
-            <div class="preformatted">{{reservationInfo.billingAddress}}</div>
-            <div *ngIf="hasTaxId">{{'invoice.vat' |translate: {'0': ('common.vat' | translate)} }} {{reservationInfo.billingDetails.taxId}}</div>
-            <div *ngIf="enabledItalyEInvoicing">{{italyEInvoicingFiscalCode}}</div>
-            <div *ngIf="enabledItalyEInvoicing">{{italyEInvoicingReference}}</div>
+          <h5 class="d-none d-md-block" translate="reservation-page.invoice-details"></h5>
+          <div class="page-header d-block d-md-none" translate="reservation-page.invoice-details"></div>
+          <div class="d-flex justify-content-center">
+            <address *ngIf="reservationInfo.invoiceRequested" class="text-left">
+              <div class="preformatted">{{reservationInfo.billingAddress}}</div>
+              <div *ngIf="hasTaxId">{{'invoice.vat' |translate: {'0': ('common.vat' | translate)} }} {{reservationInfo.billingDetails.taxId}}</div>
+              <hr *ngIf="enabledItalyEInvoicing"/>
+              <h5 class="d-none d-md-block" *ngIf="enabledItalyEInvoicing" translate="invoice-fields.addresseeItalyEInvoice"></h5>
+              <div *ngIf="enabledItalyEInvoicing">{{'invoice-fields.fiscalCode'|translate}}{{': '}}{{italyEInvoicingFiscalCode}}</div>
+              <div *ngIf="enabledItalyEInvoicing && italyEInvoicingReference != null">
+                {{(italyEInvoicingSelectedAddresseeKey | translate) + ': ' + italyEInvoicingReference}}
+              </div>
+            </address>
+            <div *ngIf="!reservationInfo.invoiceRequested">
+              <div ><fa-icon class="text-muted" [icon]="['fas', 'file-invoice']" size="2x"></fa-icon></div>
+              <div class="mt-2" translate="reservation-page.no-invoice-requested"></div>
+            </div>
           </div>
           <div class="mt-2">
-            <button type="button" class="btn btn-secondary" (click)="back()"><fa-icon [icon]="['far', 'edit']"></fa-icon>{{' '}}<span translate="common.edit"></span></button>
+            <button type="button" class="btn btn-secondary" (click)="back(true)"><fa-icon [icon]="['far', 'edit']"></fa-icon>{{' '}}{{(reservationInfo.invoiceRequested ? 'common.edit' : 'reservation-page.request-invoice') | translate}}</button>
           </div>
         </div>
       </div>
